se agrego los detalles del BNF, y tambien se corrigió, solo s edetectan errores lexicos